--- a/src/components/HomePage/index.css
+++ b/src/components/HomePage/index.css
@@ -13,7 +13,12 @@
 .homepage .main{
     flex:1;
     width:100%;
+    overflow: hidden;
+    position: relative;
 }
+/* .homepage .main >*{
+    position: relative;
+} */
 .homepage .foot{
     width:100%;
     height:1.2rem;
