--- a/src/components/Settlement/index.css
+++ b/src/components/Settlement/index.css
@@ -1,3 +1,4 @@
+
 .Settlement{
     width:100%;
     height:100%;
@@ -29,9 +30,11 @@
     border-bottom:.01rem solid #ccc;
 }
 .Settlement .list li span{
-    width:19%;
+    flex:1;
     height:.5rem;
+    font-size: .28rem;
     text-align: center;
     line-height: .5rem;
 }
+
 
