--- a/src/components/UserManagement/index.css
+++ b/src/components/UserManagement/index.css
@@ -1,7 +1,11 @@
 .am-list-content{
     display:flex;
 }
-
+.userManagement{
+    width:100%;
+    height:100%;
+    position: relative;
+}
 .table_item{
     flex:1;
 }
